--- a/OutpatientClinicSolution/OutpatientClinic.Presentation/Views/Doctor/Delete.cshtml
+++ b/OutpatientClinicSolution/OutpatientClinic.Presentation/Views/Doctor/Delete.cshtml
@@ -1,59 +1,21 @@
-﻿@model OutpatientClinic.DataAccess.Entities.Doctor
+﻿@model DoctorViewModel
 
-@{
-    ViewData["Title"] = "Delete Doctor";
-}
+<h3>Are you sure you want to delete this doctor?</h3>
+<div>
+    <h4>Dr. @Model.FullName</h4>
+    <hr />
+    <dl class="row">
+        <dt class="col-sm-2">License Number</dt>
+        <dd class="col-sm-10">@Model.LicenseNumber</dd>
 
-<h1>Delete Doctor</h1>
+        <dt class="col-sm-2">Department</dt>
+        <dd class="col-sm-10">@Model.DepartmentName</dd>
+    </dl>
 
-<div class="alert alert-danger">
-    <h3>Are you sure you want to delete this doctor?</h3>
-    <p>This action cannot be undone.</p>
-</div>
-
-<div class="card">
-    <div class="card-header bg-danger text-white">
-        <h5 class="card-title mb-0">Doctor Information</h5>
-    </div>
-    <div class="card-body">
-        <dl class="row">
-            <dt class="col-sm-3">Name</dt>
-            <dd class="col-sm-9">@(Model.DoctorNavigation.FirstName + " " + Model.DoctorNavigation.LastName)</dd>
-
-            <dt class="col-sm-3">License Number</dt>
-            <dd class="col-sm-9">@(Model.LicenseNumber ?? "Not specified")</dd>
-
-            <dt class="col-sm-3">Department</dt>
-            <dd class="col-sm-9">@Model.Department.DepartmentName</dd>
-
-            <dt class="col-sm-3">Specialty</dt>
-            <dd class="col-sm-9">@Model.Specialty</dd>
-        </dl>
-
-        @if (Model.Patients.Any() || Model.Appointments.Any())
-        {
-            <div class="alert alert-warning mt-3">
-                <h6 class="font-weight-bold">Warning!</h6>
-                <p>This doctor has existing relationships:</p>
-                <ul>
-                    @if (Model.Patients.Any())
-                    {
-                        <li>@Model.Patients.Count patients assigned to this doctor</li>
-                    }
-                    @if (Model.Appointments.Any())
-                    {
-                        <li>@Model.Appointments.Count appointments associated with this doctor</li>
-                    }
-                </ul>
-                <p>Deleting this doctor may affect these records.</p>
-            </div>
-        }
-    </div>
-    <div class="card-footer">
-        <form asp-action="Delete">
-            <input type="hidden" asp-for="DoctorId" />
-            <button type="submit" class="btn btn-danger">Delete</button>
-            <a asp-action="Index" class="btn btn-secondary">Cancel</a>
-        </form>
-    </div>
+    <form asp-action="Delete">
+        <input type="hidden" asp-for="UserId" />
+        @Html.AntiForgeryToken()
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-action="Index">Back to List</a>
+    </form>
 </div>
