--- a/OutpatientClinicSolution/OutpatientClinic.Presentation/Views/Doctor/Details.cshtml
+++ b/OutpatientClinicSolution/OutpatientClinic.Presentation/Views/Doctor/Details.cshtml
@@ -1,42 +1,31 @@
-﻿@model OutpatientClinic.DataAccess.Entities.Doctor
+﻿@model OutpatientClinic.Presentation.Models.DoctorViewModel
 
 @{
     ViewData["Title"] = "Doctor Details";
 }
 
-<h1>Doctor Details</h1>
+<h1>Details</h1>
 
 <div>
-    <h4>Doctor</h4>
-    <hr />
     <dl class="row">
-        <dt class="col-sm-2">
-            Name
-        </dt>
-        <dd class="col-sm-10">
-            @(Model.DoctorNavigation?.FirstName + " " + Model.DoctorNavigation?.LastName)
-        </dd>
-        <dt class="col-sm-2">
-            License Number
-        </dt>
-        <dd class="col-sm-10">
-            @Model.LicenseNumber
-        </dd>
-        <dt class="col-sm-2">
-            Department
-        </dt>
-        <dd class="col-sm-10">
-            @Model.Department?.DepartmentName
-        </dd>
-        <dt class="col-sm-2">
-            Specialty
-        </dt>
-        <dd class="col-sm-10">
-            @Model.Specialty
-        </dd>
+        <dt class="col-sm-2">Name:</dt>
+        <dd class="col-sm-10">@Model.FullName</dd>
+
+        <dt class="col-sm-2">Email:</dt>
+        <dd class="col-sm-10">@Model.Email</dd>
+
+        <dt class="col-sm-2">Phone:</dt>
+        <dd class="col-sm-10">@Model.PhoneNumber</dd>
+
+        <dt class="col-sm-2">License Number:</dt>
+        <dd class="col-sm-10">@Model.LicenseNumber</dd>
+
+        <dt class="col-sm-2">Specialty:</dt>
+        <dd class="col-sm-10">@Model.Specialty</dd>
+
+        <dt class="col-sm-2">Department:</dt>
+        <dd class="col-sm-10">@Model.DepartmentName</dd>
     </dl>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.DoctorId" class="btn btn-primary">Edit</a>
-    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
-</div>
+
+<a asp-action="Index" class="btn btn-secondary">Back to List</a>
