--- a/OutpatientClinicSolution/OutpatientClinic.Presentation/Views/Shared/_Layout.cshtml
+++ b/OutpatientClinicSolution/OutpatientClinic.Presentation/Views/Shared/_Layout.cshtml
@@ -62,6 +62,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    @RenderSection("Styles", required: false)
     <link rel="stylesheet" href="~/OutpatientClinic.Presentation.styles.css" asp-append-version="true" />
 
 </head>
@@ -152,3 +153,5 @@
 </body>
 </html>
 @RenderSection("Scripts", required: false)
+@RenderSection("Script", required: false)
+
